--- a/start.html
+++ b/start.html
@@ -17,25 +17,25 @@
       <table>
        <tr>
          <td><input type="button" value="7" OnClick="add('7')"></td>
-         <td><input type="button" value="8"></td>
-         <td><input type="button" value="9"></td>
+         <td><input type="button" value="8" OnClick="add('8')"></td>
+         <td><input type="button" value="9" OnClick="add('9')"></td>
           <td><input type="button" value="X"></td>
        </tr>
        <tr>
-         <td><input type="button" value="4"></td>
-         <td><input type="button" value="5"></td>
-         <td><input type="button" value="6"></td>
+         <td><input type="button" value="4" OnClick="add('4')"></td>
+         <td><input type="button" value="5" OnClick="add('5')"></td>
+         <td><input type="button" value="6" OnClick="add('6')"></td>
           <td><input type="button" value="/"></td>
        </tr>
               <tr>
-         <td><input type="button" value="1"></td>
-         <td><input type="button" value="2"></td>
-         <td><input type="button" value="3"></td>
+         <td><input type="button" value="1" OnClick="add('1')"></td>
+         <td><input type="button" value="2" OnClick="add('2')"></td>
+         <td><input type="button" value="3" OnClick="add('3')"></td>
           <td><input type="button" value="+"></td>
        </tr>
        <tr>
          <td><input type="button" value="="></td>
-         <td><input type="button" value="0"></td>
+         <td><input type="button" value="0" OnClick="add('0')"></td>
          <td><input type="button" value="."></td>
          <td><input type="button" value="-"></td>
        </tr>
@@ -47,6 +47,7 @@ var Current ="";
 function add (a) {
   Current += a;
   document.Calculator.Display.value = Current;
+  //document.getElementById ????
 }
 </script>
     </body>
